--- a/install
+++ b/install
@@ -14,7 +14,6 @@ git submodule update --init --recursive "${DOTBOT_DIR}"
 DIR="${HOME}/.vim"
 
 # Install system packages
-# Example
-[ -f "$(DIR)/autoload/plug.vim" ] || curl -fLo $(DIR)/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+#[ -f "$(DIR)/autoload/plug.vim" ] || curl -fLo $(DIR)/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 "${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" -d "${BASEDIR}" --plugin-dir dotbot-brewfile -c "${CONFIG}" "${@}"
